--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,24 +7,32 @@
     <title>Online Sop</title>
 </head>
 <body>
-    <div class="total">
-        <div class="header">
+<div class="total">
+    <div class="header">
+        <div class="upperHeader">
             <div class="logo">
                 <h2>Adrian99 ONLINE SHOP</h2>
             </div>
-            <div class="buttons">
-                <a href="">Laptop</a>
-                <a href="">Smartphone</a>
-                <a href="">Video card</a>
-                <a href="">TV</a>
+            <div class="searchBar">
+                <h2>SEARCH BAR</h2>
+            </div>
+            <div class="accountCart">
+                <h2>ACCOUNT/CART</h2>
             </div>
         </div>
-        <div class="content">
-
-        </div>
-        <div class="footer">
-
+        <div class="buttons">
+            <a href="/category/laptop">Laptop</a>
+            <a href="/category/smartphone">Smartphone</a>
+            <a href="/category/videocard">Video card</a>
+            <a href="/category/tv">TV</a>
         </div>
     </div>
+    <div class="content">
+
+    </div>
+    <div class="footer">
+
+    </div>
+</div>
 </body>
 </html>
